--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>属于宝贝的浪漫</title>
+<title>给宝宝的爱心</title>
 
 <style>
 html, body {
@@ -252,7 +252,7 @@ var c=document.getElementById("pinkboard");
 var ctx=c.getContext("2d");
 ctx.fillStyle= "#FF1493";
 ctx.font="40px STFangsong";
-ctx.fillText("Love my XY forever",canvas.width/2-155,canvas.height/2-25);
+ctx.fillText("Love my XY forever",canvas.width/2-160,canvas.height/2-25);
 ctx.fillStyle= "#d53e8f";
 ctx.font="30px Arial";
 ctx.fillText("只愿君心似我心，定不负相思意",canvas.width/2-210,canvas.height/2+250);
